# industrial_core

industrial_core/: package.xml
industrial_msgs/: CMakeLists.txt
industrial_robot_client/: CMakeLists.txt
simple_message/: CMakeLists.txt  package.xml
simple_message/cmake/: simple_messageExports.cmake
simple_message_bswap/: CMakeLists.txt  package.xml
simple_message_float64/: CMakeLists.txt  package.xml
