<package>
  <name>simple_message_float64</name>
  <version>1.0.0</version>
  <description>
	Version of the simple_message library that uses 8-byte floats (or doubles).
  </description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/simple_message</url>
  <author>Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>industrial_msgs</build_depend>
  <build_depend>simple_message</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>simple_message</run_depend>
</package>
